# SmartCrop

./: .gitignore  README.md  lectura_sensor.py  notas.txt  pyproject.toml  requirements.txt  setup.sh
Pruebas/: pruebas_reles.py
contrib/: smartcrop.service
pruebas/: lectura_mcp3008.py  mq135_test.py
scripts/: monitor.py
smartcrop/: __init__.py  controller.py  sensor.py
smartcrop_venv/: pyvenv.cfg
tests/: test_controller.py  test_sensor.py
